--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
             padding: 20px;
         }
 
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: white;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
         h1 {
             color: #0d1f3c;
             font-size: 2.5em;
@@ -34,6 +43,13 @@
             font-weight: 600;
             border-bottom: 2px solid #e1e4e8;
             padding-bottom: 0.3em;
+        }
+
+        h3 {
+            color: #0d1f3c;
+            font-size: 1.2em;
+            margin-top: 1.5em;
+            margin-bottom: 0.5em;
         }
 
         p {
@@ -75,6 +91,7 @@
             padding: 12px;
             border-bottom: 1px solid #e1e4e8;
             font-size: 0.95em;
+            vertical-align: top;
         }
 
         tr:last-child td {
@@ -87,7 +104,6 @@
 
         td:first-child {
             font-weight: 600;
-            color: #0969da;
         }
 
         td:nth-child(2) {
@@ -95,9 +111,34 @@
             color: #24292f;
         }
 
+        .method {
+            display: inline-block;
+            padding: 4px 8px;
+            border-radius: 4px;
+            font-weight: 600;
+            font-size: 0.85em;
+        }
+
+        .get { background-color: #28a745; color: white; }
+        .post { background-color: #007bff; color: white; }
+        .put { background-color: #ffc107; color: #000; }
+        .delete { background-color: #dc3545; color: white; }
+
+        .example-box {
+            background-color: #f6f8fa;
+            border-left: 4px solid #0969da;
+            padding: 15px;
+            margin: 10px 0;
+            border-radius: 4px;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding: 10px;
+            }
+
+            .container {
+                padding: 20px;
             }
 
             h1 {
@@ -119,120 +160,147 @@
     </style>
 </head>
 <body>
-    <h1>Games API Documentation</h1>
-    <p>Base URL: <code>http://localhost:3000</code></p>
+    <div class="container">
+        <h1>Games API Documentation</h1>
+        <p>Base URL: <code>http://localhost:3000</code></p>
+        <p>This API provides endpoints to manage video games and their developers with full CRUD operations, filtering, sorting, and pagination capabilities.</p>
 
-    <h2>Developers Endpoints</h2>
-    <table>
-        <tr>
-            <th>Method</th>
-            <th>Endpoint</th>
-            <th>Description</th>
-            <th>Parameters</th>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/developers</td>
-            <td>Get all developers</td>
-            <td>None</td>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/developers/:id</td>
-            <td>Get single developer by ID</td>
-            <td>id (path parameter)</td>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/developers/:id/games</td>
-            <td>Get all games by a developer</td>
-            <td>id (path parameter)</td>
-        </tr>
-        <tr>
-            <td>POST</td>
-            <td>/api/developers</td>
-            <td>Create a new developer</td>
-            <td>Body: name, country, founded_year, website (optional)</td>
-        </tr>
-        <tr>
-            <td>PUT</td>
-            <td>/api/developers/:id</td>
-            <td>Update a developer</td>
-            <td>id (path parameter), Body: name, country, founded_year, website</td>
-        </tr>
-        <tr>
-            <td>DELETE</td>
-            <td>/api/developers/:id</td>
-            <td>Delete a developer</td>
-            <td>id (path parameter)</td>
-        </tr>
-    </table>
+        <h2>Developers Endpoints</h2>
+        <table>
+            <tr>
+                <th>Method</th>
+                <th>Endpoint</th>
+                <th>Description</th>
+                <th>Parameters</th>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/developers</td>
+                <td>Get all developers with game count</td>
+                <td>None</td>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/developers/:id</td>
+                <td>Get a single developer by ID with game count</td>
+                <td><code>id</code> - Developer ID (path parameter)</td>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/developers/:id/games</td>
+                <td>Get all games by a specific developer</td>
+                <td><code>id</code> - Developer ID (path parameter)</td>
+            </tr>
+            <tr>
+                <td><span class="method post">POST</span></td>
+                <td>/api/developers</td>
+                <td>Create a new developer</td>
+                <td>
+                    <strong>Request Body (JSON):</strong><br>
+                    • <code>name</code> - Developer name (required, string)<br>
+                    • <code>country</code> - Country (required, string)<br>
+                    • <code>founded_year</code> - Founded year (required, number, 1950-current)
+                </td>
+            </tr>
+            <tr>
+                <td><span class="method put">PUT</span></td>
+                <td>/api/developers/:id</td>
+                <td>Update an existing developer</td>
+                <td>
+                    <code>id</code> - Developer ID (path parameter)<br>
+                    <strong>Request Body (JSON):</strong><br>
+                    • <code>name</code> - Developer name (required, string)<br>
+                    • <code>country</code> - Country (required, string)<br>
+                    • <code>founded_year</code> - Founded year (required, number, 1950-current)
+                </td>
+            </tr>
+            <tr>
+                <td><span class="method delete">DELETE</span></td>
+                <td>/api/developers/:id</td>
+                <td>Delete a developer (cascades to games)</td>
+                <td><code>id</code> - Developer ID (path parameter)</td>
+            </tr>
+        </table>
 
-    <h2>Games Endpoints</h2>
-    <table>
-        <tr>
-            <th>Method</th>
-            <th>Endpoint</th>
-            <th>Description</th>
-            <th>Parameters</th>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/games</td>
-            <td>Get all games with filtering, sorting, and pagination</td>
-            <td>
-                Query Parameters:<br>
-                - limit (default: 10)<br>
-                - offset (default: 0)<br>
-                - search (searches title and description)<br>
-                - genre (filter by single genre)<br>
-                - genres (filter by multiple genres, comma-separated)<br>
-                - sort (rating, release_year, price, title)<br>
-                - order (asc or desc)<br>
-                - minPrice, maxPrice (price range)<br>
-                - minRating, maxRating (rating range 0-10)
-            </td>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/games/:id</td>
-            <td>Get single game by ID</td>
-            <td>id (path parameter)</td>
-        </tr>
-        <tr>
-            <td>POST</td>
-            <td>/api/games</td>
-            <td>Create a new game</td>
-            <td>Body: title, description, genre, release_year, platform, rating (0-10), price, developer_id</td>
-        </tr>
-        <tr>
-            <td>PUT</td>
-            <td>/api/games/:id</td>
-            <td>Update a game</td>
-            <td>id (path parameter), Body: title, description, genre, release_year, platform, rating, price, developer_id</td>
-        </tr>
-        <tr>
-            <td>DELETE</td>
-            <td>/api/games/:id</td>
-            <td>Delete a game</td>
-            <td>id (path parameter)</td>
-        </tr>
-    </table>
+        <h2>Games Endpoints</h2>
+        <table>
+            <tr>
+                <th>Method</th>
+                <th>Endpoint</th>
+                <th>Description</th>
+                <th>Parameters</th>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/games</td>
+                <td>Get all games with optional filtering, sorting, and pagination</td>
+                <td>
+                    <strong>Query Parameters:</strong><br>
+                    • <code>limit</code> - Number of results per page (default: 10)<br>
+                    • <code>offset</code> - Number of results to skip (default: 0)<br>
+                    • <code>search</code> - Search in title and description<br>
+                    • <code>genre</code> - Filter by single genre<br>
+                    • <code>genres</code> - Filter by multiple genres (comma-separated)<br>
+                    • <code>sort</code> - Sort field (rating, release_year, title, id)<br>
+                    • <code>order</code> - Sort direction (asc, desc, default: asc)<br>
+                    • <code>minRating</code> - Minimum rating (0-10)<br>
+                    • <code>maxRating</code> - Maximum rating (0-10)
+                </td>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/games/:id</td>
+                <td>Get a single game by ID</td>
+                <td><code>id</code> - Game ID (path parameter)</td>
+            </tr>
+            <tr>
+                <td><span class="method post">POST</span></td>
+                <td>/api/games</td>
+                <td>Create a new game</td>
+                <td>
+                    <strong>Request Body (JSON):</strong><br>
+                    • <code>title</code> - Game title (required, string)<br>
+                    • <code>description</code> - Game description (required, string)<br>
+                    • <code>genre</code> - Genre (required, string)<br>
+                    • <code>release_year</code> - Release year (required, number, 1950-current)<br>
+                    • <code>platform</code> - Platform (required, string)<br>
+                    • <code>rating</code> - Rating (required, number, 0-10)<br>
+                    • <code>developer_id</code> - Developer ID (required, number)
+                </td>
+            </tr>
+            <tr>
+                <td><span class="method put">PUT</span></td>
+                <td>/api/games/:id</td>
+                <td>Update an existing game</td>
+                <td>
+                    <code>id</code> - Game ID (path parameter)<br>
+                    <strong>Request Body (JSON):</strong><br>
+                    Same fields as POST (all required)
+                </td>
+            </tr>
+            <tr>
+                <td><span class="method delete">DELETE</span></td>
+                <td>/api/games/:id</td>
+                <td>Delete a game</td>
+                <td><code>id</code> - Game ID (path parameter)</td>
+            </tr>
+        </table>
 
-    <h2>Statistics Endpoint</h2>
-    <table>
-        <tr>
-            <th>Method</th>
-            <th>Endpoint</th>
-            <th>Description</th>
-            <th>Parameters</th>
-        </tr>
-        <tr>
-            <td>GET</td>
-            <td>/api/statistics</td>
-            <td>Get API statistics (total counts, averages, top developers)</td>
-            <td>None</td>
-        </tr>
-    </table>
+        <h2>Statistics Endpoint</h2>
+        <table>
+            <tr>
+                <th>Method</th>
+                <th>Endpoint</th>
+                <th>Description</th>
+                <th>Parameters</th>
+            </tr>
+            <tr>
+                <td><span class="method get">GET</span></td>
+                <td>/api/statistics</td>
+                <td>Get API statistics (total counts, averages, top developers)</td>
+                <td>None</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
